# MachineLearningPython

./: README.md  requirements.txt
LucianoGaldino/Secao04_Classificacao/ModelosClassificacao/: classificacao.ipynb  tratamento_classificacao.ipynb
MachineLearning/: pyproject.toml
MachineLearning/LucianoGaldino/Notas/: Sklearn.txt
MachineLearning/LucianoGaldino/Secao04_Classificacao/ModelosClassificacao/: __init__.py
MachineLearning/Modelos_Classificacao/NaiveBayes/: Gaussian_NaiveBayes_Cancer.ipynb  PreProcessamento_NaiveBayes_Cancer.ipynb
MachineLearning/OutsPokenMarket/Secao01_ConceitosFundamentais/: Aula12_ConceitosBásicosEstatisticos.txt
ModelosClassificacao/: classificacao.ipynb  tratamento_classificacao.ipynb
OutsPokenMarket/Secao01_ConceitosFundamentais/: Aula09_OqueÉModeloMatemático.txt  Aula10-DataMining.txt  Aula11_CriaçãoDoAlvo.txt  Aula13_ClassificadorNaiveBayes.csv.xlsx  Aula13_NaiveBayes.txt  OqueÉModeloMatemático.txt
