[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Vitor Kruel <vkruel.programador@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
pandas = "^2.0.2"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
